	Added: Warning about power mode being changed externally when auto-adjust is enabled.
	Fixed: Recently modified being weird.
	Internal: Path visibility changes to shown path is cached in some instances, in case it is used in multiple parts.
	FIXED: A MAJOR BUG IN POWER AUTO-ADJUST. This potentially caused crippling of the computer due to power saver mode getting stuck. Was fun.
### 2018-01-24
	Changed: Recently modified ignoring improved. Programs that try to know what is best for them are let to do so.
### 2018-01-23
	Added: Health monitor now enables NVM stats in the UI.
	Internal: Lots of small internal changes.
### 2018-01-22
	Fixed: Errors were not colored on initial load.
	Changed: Analyzer is more user configurable.
	Fixed: Process tracking is improved.
	Added: Simple configuration window for some experimental features.
	Fixed: Some odd number outputs.
### 2018-01-20
	Internal: Large number of changes that should not affect functionality.
### 2018-01-19
	Fixed: Weird affinity saving.
### 2018-01-18
	Changed: Default path visibility flipped to Process if Executable is defined and Partial otherwise
		Previously it was show Process if Path was not defined and Partial otherwise.
	Fixed: UI allowed creation of invalid watchlist rules (no priority, affinity, nor power).
	Changed: WMI will no longer be used for path fetching, it simply does not give results if other methods fail.
	Fixed: Weird path visibility behaviour in terms of saving it (with Process set as the choice).
### 2018-01-17
	Changed: Process analysis improved
	Fixed: Weird time formatting in power configuration window.
### 2018-01-16
	Fixed: An error with process already exited, yet again.
	Changed: Process analysis is now much more comprehensive. Added `Record analysis´ experimental option.
	Fixed: Process state was not being tracked properly.
	Fixed: Weird output for scan frequency.
### 2018-01-15
	Changed: Process path acquisition improved.
	Fixed: An error with process already exited.